cmake_minimum_required(VERSION 2.6)
project(cpp_study)
set(CMAKE_CXX_STANDARD 14)

include_directories("${PROJECT_BINARY_DIR}")

include_directories("${PROJECT_SOURCE_DIR}/section0")
include_directories("${PROJECT_SOURCE_DIR}/section1")
include_directories("${PROJECT_SOURCE_DIR}/section2")
include_directories("${PROJECT_SOURCE_DIR}/section3")
include_directories("${PROJECT_SOURCE_DIR}/section4")
include_directories("${PROJECT_SOURCE_DIR}/section5")
add_subdirectory(section0)
add_subdirectory(section1)
add_subdirectory(section2)
add_subdirectory(section3)
add_subdirectory(section4)
add_subdirectory(section5)
set(EXTRA_LIBS ${EXTRA_LIBS} section0)
set(EXTRA_LIBS ${EXTRA_LIBS} section1)
set(EXTRA_LIBS ${EXTRA_LIBS} section2)
set(EXTRA_LIBS ${EXTRA_LIBS} section3)
set(EXTRA_LIBS ${EXTRA_LIBS} section4)
set(EXTRA_LIBS ${EXTRA_LIBS} section5)
